Add work order offline sync upload and delta download (V2.6 M6.1).
Introduce SAVE_WORK_ORDER_PROGRESS for draft completion notes and populate delta.workOrders through the existing mobile sync protocol, mirroring inspection delta token semantics, scoping, and watermark behaviour.

Co-authored-by: Cursor <cursoragent@cursor.com>